Adicionando alterações importantes

--- a/IdeaProjects/cen1/.gitignore
+++ b/IdeaProjects/cen1/.gitignore
@@ -27,3 +27,14 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+# Ignorar arquivos do Windows
+Thumbs.db
+Desktop.ini
+
+# Ignorar pastas específicas de IDEs
+
+.idea/
+
+# Ignorar arquivos temporários
+*.log
+*.tmp
