--- a/IdeaProjects/cen1/.gitignore
+++ b/IdeaProjects/cen1/.gitignore
@@ -27,3 +27,27 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+# Ignorar arquivos e diretórios do sistema e de usuário
+.gitconfig
+.ssh/
+.android/
+.arduinoIDE/
+.cache/
+.config/
+.dotnet/
+.gsutil/
+.idlerc/
+.local/
+.matplotlib/
+.nbi/
+.nuget/
+.packettracer/
+.redhat/
+.vuerc
+OneDrive/
+Desktop/
+Documents/
+Downloads/
+Music/
+Pictures/
+Videos/
