--- a/IdeaProjects/cen1/.gitignore
+++ b/IdeaProjects/cen1/.gitignore
@@ -21,36 +21,9 @@ bin/
 /dist/
 /nbdist/
 /.nb-gradle/
-# Arquivos de configuração do VSCode
+
+### VS Code ###
 .vscode/
 
-# Arquivos do MacOS
+### Mac OS ###
 .DS_Store
-<<<<<<< HEAD
-# Ignorar arquivos e diretórios do sistema e de usuário
-.gitconfig
-.ssh/
-.android/
-.arduinoIDE/
-.cache/
-.config/
-.dotnet/
-.gsutil/
-.idlerc/
-.local/
-.matplotlib/
-.nbi/
-.nuget/
-.packettracer/
-.redhat/
-.vuerc
-OneDrive/
-Desktop/
-Documents/
-Downloads/
-Music/
-Pictures/
-Videos/
-=======
-
->>>>>>> fe593cf30403ec31bdaff0c87adedadafbfd67ff
